--- a/package.json
+++ b/package.json
@@ -25,12 +25,10 @@
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-eslint": "~5.0.8",
     "@vue/cli-service": "~5.0.8",
-    "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^8.7.1",
-    "prettier": "^2.7.1"
+    "eslint-plugin-vue": "^8.7.1"
   },
   "eslintConfig": {
     "root": true,
@@ -39,7 +37,6 @@
     },
     "extends": [
       "plugin:vue/vue3-essential",
-      "plugin:prettier/recommended",
       "eslint:recommended"
     ],
     "parserOptions": {
