--- a/.github/workflows/azure-staticwebapp.yml
+++ b/.github/workflows/azure-staticwebapp.yml
@@ -21,9 +21,8 @@ on:
 
 # Environment variables available to all jobs and steps in this workflow
 env:
-  APP_LOCATION: "/" # location of your client code
-  API_LOCATION: "api" # location of your api source code - optional
-  APP_ARTIFACT_LOCATION: "build" # location of client code build output
+  APP_LOCATION: "src" # location of your client code
+  APP_ARTIFACT_LOCATION: "dist" # location of client code build output
   AZURE_STATIC_WEB_APPS_API_TOKEN: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }} # secret containing deployment token for your static web app
 
 permissions:
@@ -50,9 +49,12 @@ jobs:
           action: "upload"
           ###### Repository/Build Configurations - These values can be configured to match you app requirements. ######
           # For more information regarding Static Web App workflow configurations, please visit: https://aka.ms/swaworkflowconfig
-          app_location: ${{ env.APP_LOCATION }}
-          api_location: ${{ env.API_LOCATION }}
-          app_artifact_location: ${{ env.APP_ARTIFACT_LOCATION }}
+          app_location: ${{ env.APP_LOCATION }} # App source code path
+          api_location: ${{ env.API_LOCATION }} # Api source code path - optional
+          app_artifact_location: ${{ env.APP_ARTIFACT_LOCATION }} # Built app content directory - optional
+          app_build_command: "pnpm run build" # Build script for generating the app content directory
+          
+          
           ###### End of Repository/Build Configurations ######
 
   close_pull_request_job:
