--- a/package.json
+++ b/package.json
@@ -1,53 +1,46 @@
 {
-  "name": "social-media-links-page",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "build:app": "pnpm run build:check && pnpm run build",
-    "build:check": "pnpm run lint && pnpm run format:check",
-    "lint": "vue-cli-service lint",
-    "format": "prettier --write \"**/*.{js,vue,d.ts}\"",
-    "format:check": "prettier --check \"**/*.{js,vue,d.ts}\""
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-brands-svg-icons": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "@fortawesome/vue-fontawesome": "^3.0.1",
-    "core-js": "^3.25.5",
-    "vue": "^3.2.41"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.19.6",
-    "@babel/eslint-parser": "^7.19.1",
-    "@vue/cli-plugin-babel": "~5.0.8",
-    "@vue/cli-plugin-eslint": "~5.0.8",
-    "@vue/cli-service": "~5.0.8",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^8.7.1"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not ie 11"
-  ]
+	"packageManager": "pnpm",
+	"name": "social-media-links-page",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"serve": "vue-cli-service serve",
+		"build": "vue-cli-service build",
+		"build:app": "pnpm run build:check && pnpm run build",
+		"build:check": "pnpm run lint && pnpm run format:check",
+		"lint": "vue-cli-service lint",
+		"format": "prettier --write \"**/*.{js,vue,d.ts}\"",
+		"format:check": "prettier --check \"**/*.{js,vue,d.ts}\""
+	},
+	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^6.2.0",
+		"@fortawesome/free-brands-svg-icons": "^6.2.0",
+		"@fortawesome/free-solid-svg-icons": "^6.2.0",
+		"@fortawesome/vue-fontawesome": "^3.0.1",
+		"core-js": "^3.25.5",
+		"vue": "^3.2.41"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.19.6",
+		"@babel/eslint-parser": "^7.19.1",
+		"@vue/cli-plugin-babel": "~5.0.8",
+		"@vue/cli-plugin-eslint": "~5.0.8",
+		"@vue/cli-service": "~5.0.8",
+		"eslint": "^7.32.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-vue": "^8.7.1"
+	},
+	"eslintConfig": {
+		"root": true,
+		"env": {
+			"node": true
+		},
+		"extends": ["plugin:vue/vue3-essential", "eslint:recommended"],
+		"parserOptions": {
+			"parser": "@babel/eslint-parser"
+		},
+		"rules": {}
+	},
+	"browserslist": ["> 1%", "last 2 versions", "not dead", "not ie 11"]
 }
